# simpler-grants-gov

./: .dockerignore  .dockleconfig  .env.example  .gitignore  .grype.yml  .hadolint.yaml  .pre-commit-config.yaml  .template-version  .terraform-version  .trivyignore  .trivyignore.yaml  CODE_OF_CONDUCT.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTING_EXTERNAL.md  CONTRIBUTING_INTERNAL.md  DEVELOPMENT.md  DOCUMENTATION.md  ENV_VARIABLES.md  LICENSE.md  LOCAL_ENV_SETUP.md  MAINTAINERS.md  Makefile  OPERATIONS.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  api-service-plan-dev.txt  denial-tracker.md  docker-compose.yml  edx.harvard.md  evidence_bundle_README_template.md  export_reports.py  insert_license_headers.sh  latest.txt  lychee.toml  negative_path_apply  override.env  package-lock.json  (+5 more)
analytics/: .gitignore  Dockerfile  Makefile  README.md  cli.py  config.py  docker-compose.yml  local.env  mock.db  newrelic.ini  pyproject.toml  reporting.ipynb  settings.toml
analytics/config/: github-projects.json
analytics/data/: issue-data.json  sprint-data.json
analytics/delivery-metrics/: README.md
analytics/delivery-metrics/json/: example-02.json
analytics/delivery-metrics/sql/: README.md  create_delivery_metrics_db.sql
analytics/delivery-metrics/src/: calculate_percent_complete.py
analytics/src/analytics/: __init__.py  cli.py  config.py
analytics/tests/: __init__.py  assertions.py  conftest.py  etldb_test_01.json  ruff.toml  test_cli.py  test_version.py
analytics/tests/dataquality/: __init__.py  test_data_quality.py
analytics/tests/datasets/: __init__.py  test_acceptance_criteria.py  test_base.py  test_deliverable_tasks.py  test_etldb.py  test_github_projects.py  test_issues.py  test_sprint_board.py
analytics/tests/etl/: __init__.py  test_github.py  test_utils.py
analytics/tests/integrations/: __init__.py  test_etldb.py  test_slack.py
analytics/tests/logs/: __init__.py  test_ecs_background_task.py  test_formatters.py  test_logging.py  test_pii.py
analytics/tests/metrics/: __init__.py  test_base.py  test_burndown.py  test_burnup.py  test_percent_complete.py
api/: .gitignore  COMMON_GRANTS_INTEGRATION.md  Dockerfile  Dockerfile_opensearch  MICHAEL_RESPONSE_SUMMARY.md  Makefile  README.md  XML_VALIDATION_EXAMPLES.md  XSD_PARAMETER_USAGE.md  all_results.json  artillery-load-test.yml  config.json  docker-compose-both.yml  docker-compose.debug.yml  docker-compose.yml  docker-python-base  docker-python-openapi  e2e_api_key.tmp  gunicorn.conf.py  local.env  my_template.json  newrelic.ini  openapi-cg.generated.yml  openapi.generated.yml  pyproject.toml  results.json  run_xml_validation.py  run_xml_validation_docker.sh  seed_legacy.py  setup.cfg  sf424d-sample.xml  test_dev_endpoints.py
api/docs/: api_keys_schema.md
api/examples/: search_opportunities.py
api/mock-oauth/: config.json  mock-server-key.json
api/mock-soap-services/: README.md
api/mock-soap-services/applicants/: applicants-config.yaml  applicants.wsdl
api/mock-sqs/: README.md  custom.conf
api/opensearch/: Dockerfile
api/src/: __main__.py  app.py  app_config.py
api/src/api/: healthcheck.py  response.py  route_utils.py
api/src/auth/: README.md  api_gateway_key_auth.py  api_jwt_auth.py  api_key_auth.py  api_user_key_auth.py  auth_errors.py  auth_handler.py  auth_utils.py  endpoint_access_util.py  internal_jwt_auth.py  jwt_user_http_token_auth.py  login_gov_jwt_auth.py  multi_auth.py
api/src/cli/: xml_generation_cli.py
api/src/constants/: lookup_constants.py  schema.py  static_role_values.py
api/src/data_migration/: __init__.py  config.yaml  copy_data_between_dbs.py  copy_oracle_data.py  data_migration_blueprint.py  poc_transform.py  setup_foreign_tables.py  setup_oracle_fdw.py  transform.sql
api/src/db/: setup_local_dynamodb.py
api/src/examples/: sam_gov_client_example.py  sam_gov_extracts_example.py
api/src/form_schema/: csv_to_jsonschema.py  dat_to_jsonschema.py  dat_to_jsonschema_cli.py  enums.py  field_info.py  jsonschema_builder.py  jsonschema_resolver.py  jsonschema_validator.py
api/src/legacy_soap_api/: __init__.py  legacy_soap_api_auth.py  legacy_soap_api_blueprint.py  legacy_soap_api_client.py  legacy_soap_api_config.py  legacy_soap_api_constants.py  legacy_soap_api_handler.py  legacy_soap_api_proxy.py  legacy_soap_api_routes.py  legacy_soap_api_schemas.py  legacy_soap_api_utils.py  simpler_soap_api.py  soap_payload_handler.py
api/src/logging/: __init__.py  audit.py  config.py  decodelog.py  flask_logger.py  formatters.py  pii.py
api/src/pagination/: pagination_models.py  pagination_schema.py  paginator.py  sorting_util.py
api/src/search/: search_config.py  search_models.py
api/src/services/: service_utils.py
api/src/static/: swagger-ui.min.css
api/src/task/: __init__.py  base_task.py  ecs_background_task.py  generate_internal_token.py  pdf_generation_cli.py  setup_e2e_test_user.py  subtask.py  task.py  task_blueprint.py  task_job_lock.py  versioning_playground.py
api/src/util/: __init__.py  datetime_util.py  decimal_util.py  deploy_metadata.py  dict_util.py  env_config.py  file_util.py  input_sanitizer.py  json_util.py  local.py  sam_gov_utils.py  string_utils.py  text_extractor.py  xls_to_csv.py  xml_utils.py
api/src/validation/: validation_constants.py
api/src/workflow/: README.md  base_state_machine.py  (+4 more)
api/tests/: conftest.py
api/tool/: xml_cli.py  xml_validator.py
api/transform/: .user.yml  Dockerfile  README.md  dbt_project.yml  profiles.yml
backend/example_api/: .gitignore  Dockerfile  Makefile  docker-compose.yml  local.env  pyproject.toml
backend/grants_shared/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  pyproject.toml
backend/shared/: pyproject.toml
metrics/: pyproject.toml
metrics/tests/: test_version.py
milestone-cli/: Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
milestone-cli/milestone_cli/: cli.py  schemas.py  utils.py
milestone-cli/tests/: conftest.py  dummy_milestones.yaml  test_milestone_cli.py  test_schemas.py  test_utils.py
(+6206 files in other folders)
