[tool.poetry]
authors = ["widal001 <billy.daly@agile6.com>"]
description = "Python package for analyzing data related to the Simpler Grants Project"
name = "simpler-grants-gov-analytics"
packages = [{ include = "analytics", from = "src" }]
readme = "README.md"
version = "0.1.0"
include = ["newrelic.ini"]

[tool.poetry.scripts]
analytics = "analytics.cli:app"
db-migrate = "analytics.cli:migrate_database"

[tool.poetry.dependencies]
dynaconf = "^3.2.4"
pandas = "^2.0.3"
pandas-stubs = "^2.0.2.230605"
pydantic = "^2.0.3"
python = "~3.13"
slack-sdk = "^3.23.0"
sqlparse = ">=0.5.0"
typer = { extras = ["all"], version = "^0.19.0" }
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.4"
boto3 = "^1.35.56"
boto3-stubs = "^1.35.56"
psycopg = "^3.2.3"
smart-open = "^7.0.5"
newrelic = "10.17.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.4.1"
pylint = "^3.0.2"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.13.0"
safety = "^3.0.0"
types-requests = "^2.32.0.20241016"
moto = "^5.0.22"
syrupy = "^4.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["dynaconf.*", "newrelic.*"]

[[tool.mypy.overrides]]
module = "sqlparse"
ignore_missing_imports = true

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "R0801", # duplicate-code
  "W0511", # fix-me
  "R0913", # too-many-arguments
  "R0917", # too-many-positional-arguments
  "R0902", # too-many-instance-attributes
  "R0903", # too-few-public-methods
  "W1514", # unspecified-encoding
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",    # no blank line before class
  "D212",    # multi-line summary first line
  "FIX002",  # line contains TODO
  "PD901",   # pandas df variable name
  "PLR0913", # Too many arguments to function call
  "PTH123",  # `open()` should be replaced by `Path.open()`
  "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
  "TD003",   # missing an issue link on TODO
  "FA102",   # Adding "from __future__ import annotations" to any new-style type annotation
  "TC006",   # Changing all cast calls to strings instead of actual types
]

[tool.ruff.lint.flake8-builtins]
# Don't complain about shadowing the builtin format function
# Many builtin classes we extend use format as a function name
builtins-ignorelist = ["format"]

[tool.pytest.ini_options]
filterwarnings = [
  # kaleido is throwing a Deprecation warning in one of its dependencies
  # TODO(widal001): 2022-12-12 - Try removing after Kaleido issues a new release
  'ignore:.*setDaemon\(\) is deprecated.*:DeprecationWarning',
]
