[project]
name = "simpler-grants-gov-analytics"
version = "0.1.0"
description = "Python package for analyzing data related to the Simpler Grants Project"
authors = [{ name = "widal001", email = "billy.daly@agile6.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dynaconf>=3.2.13,<4",
    "pandas>=2.0.3,<3",
    "pandas-stubs>=2.0.2.230605,<3",
    "pydantic>=2.0.3,<3",
    "slack-sdk>=3.23.0,<4",
    "sqlparse>=0.5.0",
    "typer>=0.25.0,<0.26",
    "sqlalchemy>=2.0.30,<3",
    "pydantic-settings>=2.3.4,<3",
    "boto3>=1.35.56,<2",
    "boto3-stubs>=1.35.56,<2",
    "psycopg[binary]>=3.2.3,<4",
    "smart-open>=7.0.5,<8",
    "newrelic>=11.5.0,<12",
    "requests>=2.33.0,<3",
    "urllib3>=2.7.0,<3",
]

[project.scripts]
analytics = "analytics.cli:app"
db-migrate = "analytics.cli:migrate_database"

[dependency-groups]
dev = [
    "black>=26.3.1,<27",
    "mypy>=1.4.1,<2",
    "pylint>=3.0.2,<4",
    "pytest>=8.0.0,<9",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.15.0,<0.16",
    "types-requests>=2.32.0.20241016,<3",
    "moto>=5.0.22,<6",
    "syrupy>=4.8.1,<5",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/analytics"]

[tool.hatch.build.targets.sdist.force-include]
"newrelic.ini" = "newrelic.ini"

[tool.hatch.build.targets.wheel]
include = ["src/analytics"]

[tool.hatch.build.targets.wheel.sources]
"src/analytics" = "analytics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.14"

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["dynaconf.*", "newrelic.*"]

[[tool.mypy.overrides]]
module = "sqlparse"
ignore_missing_imports = true

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "R0801", # duplicate-code
  "W0511", # fix-me
  "R0913", # too-many-arguments
  "R0917", # too-many-positional-arguments
  "R0902", # too-many-instance-attributes
  "R0903", # too-few-public-methods
  "W1514", # unspecified-encoding
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",    # no blank line before class
  "D212",    # multi-line summary first line
  "FIX002",  # line contains TODO
  "PLR0913", # Too many arguments to function call
  "PTH123",  # `open()` should be replaced by `Path.open()`
  "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
  "TD003",   # missing an issue link on TODO
  "FA102",   # Adding "from __future__ import annotations" to any new-style type annotation
  "TC006",   # Changing all cast calls to strings instead of actual types
  "TC001",   # No imports for only type checking internal implementation
  "TC002",   # No imports for only type checking third-party libraries
  "TC003",   # No imports for only type checking standard libraries
]

[tool.ruff.lint.flake8-builtins]
# Don't complain about shadowing the builtin format function
# Many builtin classes we extend use format as a function name
builtins-ignorelist = ["format"]

[tool.pytest.ini_options]
filterwarnings = [
  # kaleido is throwing a Deprecation warning in one of its dependencies
  # TODO(widal001): 2022-12-12 - Try removing after Kaleido issues a new release
  'ignore:.*setDaemon\(\) is deprecated.*:DeprecationWarning',
]
