[tool.poetry]
name = "milestone-cli"
version = "0.1.0"
description = ""
authors = ["widal001 <williamdaly422@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.270"
tox = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
