[tool.poetry]
authors = ["widal001 <williamdaly422@gmail.com>"]
description = ""
name = "milestone-cli"
version = "0.1.0"

[tool.poetry.dependencies]
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
pydantic = "^1.10.8"
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
ruff = "^0.0.270"
tox = "^4.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
milestones = "milestone_cli.cli:app"
