[project]
name = "example_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apiflask>=3.1.0,<4",
    "grants-shared==0.1.1",
]

[tool.uv.sources]
grants-shared = { path = "../grants_shared", editable = true }


[tool.uv.build-backend]
module-name = ["src"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.8,<0.11.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
